# hmah-bezier

./: .gitignore  CMakeLists.txt  README.md
src/: bezier2.c  bezier2.h  bezier3.c  bezier3.h  bezier_core.c  bezier_core.h
tests/: CMakeLists.txt  cubic_test.c  linear_test.c  quadratic_test.c  test_plot.h
